--- a/src/pages/clientes/clientes.scss
+++ b/src/pages/clientes/clientes.scss
@@ -1,14 +1,50 @@
 page-clientes {
-    ion-col div {
-        background-color: #f0f5ff;
-        border: 1px solid #e6e9ee;
-        border-radius: 2px;
-        padding: 5px;
-        text-align: center;
-      }
-    
-      p {
-        padding: 10px 0 0 10px !important;
-        margin: 0;
-      }
+
+  .fixed-content {
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    position: absolute;
+    display: block;
+      background-color: #66a038 !important;
+  }
+      
+  .button-md{
+    background-color: #878D80   !important;
+  }
+  
+  .label-md{
+    color:azure !important;
+  }
+
+  .item-md{
+    background-color:#66a038     !important;
+  }
+  .padre {
+    padding: 10px 2rem;
+       margin-top: 5rem;
+          margin-left :3rem;
+          
+  }
+      
+   .button-ios {
+    border-radius: 4px;
+    height: 2.8em;
+    font-size: 1.6rem;
+    color: black;
+    background-color: #f7f7f7;
+    margin: 0.4rem 0.2rem;
+    padding: 0 1em;
+  }
+  
+  .button-ios.activated {
+    background-color: #66a038 !important;
+       color: #fff;
+    opacity: 1;
+  }
+  
+  .button-ios:hover:not(.disable-hover) {
+    opacity: 0.8;
+  }
 } 
