--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -20,6 +20,10 @@ page-about {
       
       .item-md{
         background-color:#66a038     !important;
+        color:azure;
+      }
+      .content-md{
+        color:azure;
       }
       .padre {
         padding: 10px 2rem;
