--- a/src/pages/clientes/clientes.scss
+++ b/src/pages/clientes/clientes.scss
@@ -10,6 +10,9 @@ page-clientes {
       background-color: #66a038 !important;
   }
       
+  .content-md{
+    color:azure;
+  }
   .button-md{
     background-color: #878D80   !important;
   }
@@ -20,6 +23,7 @@ page-clientes {
 
   .item-md{
     background-color:#66a038     !important;
+    color:azure;
   }
   .padre {
     padding: 10px 2rem;
