--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -18,8 +18,12 @@ page-home {
   color:azure !important;
 }
 
+.content-md{
+  color:azure;
+}
 .item-md{
   background-color:#66a038     !important;
+  color:azure;
 }
 .padre {
   padding: 10px 2rem;
