--- a/src/pages/clientes/clientes.scss
+++ b/src/pages/clientes/clientes.scss
@@ -1,5 +1,11 @@
 page-clientes {
 
+
+  .estiloIconosTabla{
+    background: transparent !important;
+    border: transparent !important;
+    color: azure !important;
+  }
   .ion-row {
     white-space: nowrap;
     width: 50px;
