--- a/src/pages/clientes/clientes.scss
+++ b/src/pages/clientes/clientes.scss
@@ -1,6 +1,8 @@
 page-clientes {
 
-  
+  .tituloForm{
+    text-align: center;font-size: 2rem;font-weight: 500;
+  }
   .estiloHeaderTabla{
     border-color: azure !important;
     border-style: double !important;
